# app_mplab

./: .gitignore  .gitmodules  readme.md
Sample/KF_loopback_with_Randy_wka_v1/: gen.bat  mec175x_spi_cfg.txt
Sample/KF_loopback_with_Randy_wka_v1/kf_freertos_fpga.X/: kf_freertos_fpga.mc3
Sample/KF_loopback_with_Randy_wka_v1/kf_freertos_fpga.X/nbproject/: Makefile-genesis.properties  Makefile-kf_freertos_fpga.mk  Makefile-local-kf_freertos_fpga.mk  configurations.xml  project.xml
Sample/KF_loopback_with_Randy_wka_v1/src/: main.c  task1.c  task2.c  task4.c
Sample/KF_loopback_with_Randy_wka_v1/src/tests/: test_ccc.h  test_ibis.c  test_icm42605.h  test_pvt_xfer.c  tgt_test_ibis.c  tgt_test_pvt_xfer.c
Sample/KF_loopback_with_Randy_wka_v1_ibi/kf_freertos_fpga.X/nbproject/: Makefile-genesis.properties  Makefile-impl.mk  Makefile-kf_freertos_fpga.mk  Makefile-variables.mk  configurations.xml
Sample/KF_loopback_with_Randy_wka_v1_ibi/kf_freertos_fpga.X/queuelogs/: debugtool.txt
Sample/KF_loopback_with_Randy_wka_v1_ibi/src/: task1.c  task1.h  task2.c  task2.h  task3.c  task4.c
Sample/KF_loopback_with_Randy_wka_v1_ibi/src/tests/: test_ccc.c  test_ibis.c  test_icm42605.c  test_pvt_xfer.c  tgt_test_ibis.c
develope/app/hello_world/boards/: mec172xmodular_assy6930.conf  mec172xmodular_assy6930.overlay
develope/app/hello_world/src/: main.c
develope/app/introspect/: prj.conf
develope/app/introspect_slave/: prj.conf
develope/app/test_retimer/: CMakeLists.txt  prj.conf
develope/app/test_retimer/lib/: CMakeLists.txt  Makefile  ps8833.c
(+66 files in other folders)
